# serial-flash-py

./: pyproject.toml  requirements.txt
serial_flash/: __init__.py  __main__.py  execute.py
serial_flash/image/: __init__.py  elf.py  uf2.py
serial_flash/transport/: __init__.py  tcp.py
serial_flash/transport/bluetooth/: spp.py
