[project]
name = "serial-flash-py"
version = "0.0.1"
authors = [{ name = "Sanaa Hamel", email = "sanaahamel@outlook.com" }]
description = "Tool for flashing images to picowota devices."
readme = "README.rst"
requires-python = ">=3.7"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Operating System :: OS Independent",
]
dependencies = [
  # "lief>=0.13.2", # optional
  "tqdm>=4.65.0",
  "typed-argparse>=0.2.11",
  "typing_extensions",
]

[project.urls]
"Homepage" = "https://github.com/sanaahamel/serial-flash-py"
"Bug Tracker" = "https://github.com/sanaahamel/serial-flash-py/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["serial_flash"]
